--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,13 +13,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/etOrigin"
+    android:nextFocusDown="@id/etDestination"
     />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etDestination"
-        android:hint="Where are you going"/>
+        android:hint="Where are you going"
+        android:inputType="textAutoComplete"
+        android:nextFocusDown="@id/btnFindPath"/>
 
 
     <LinearLayout
@@ -33,7 +36,7 @@
 
             android:text="Find the way"
             android:padding="5dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="10dp"
             android:background="@color/yellow"
             />
         <TextView
