--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,17 +10,21 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/bus"
+        android:src="@drawable/tatu_logo_01"
         android:id="@+id/busrot"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginTop="56dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginStart="72dp"
+        android:layout_below="@+id/textView7"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
     <!--<ImageView-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
-        <!--android:src="@drawable/bus"-->
+        <!--android:src="@drawable/tatu_logo_02"-->
         <!--android:id="@+id/busleft"-->
-        <!--android:layout_marginLeft="140dp"-->
-        <!--android:layout_marginTop="200dp"/>-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
     <TextView
         android:layout_width="fill_parent"
@@ -29,11 +33,11 @@
         android:textColor="@color/lightBlue"
         android:gravity="center_horizontal"
         android:text="Easing the use of public transport, one PSV at a time "
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="42dp"
         android:padding="5dp"
+        android:id="@+id/textView7"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView7" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
