--- a/app/src/main/res/layout/tweet_list_item.xml
+++ b/app/src/main/res/layout/tweet_list_item.xml
@@ -55,8 +55,8 @@
         android:id="@+id/seperator"
         android:layout_width="fill_parent"
         android:layout_height="0.5dp"
-        android:layout_below="@+id/date"
-        android:background="#9EA3B0" />
+        android:background="#9EA3B0"
+        android:layout_below="@id/tweetTextView"/>
         </RelativeLayout>
     </ScrollView>
 
